--- a/HiddenVilla/Pages/LearnBlazor/Components/ChildComponent.razor
+++ b/HiddenVilla/Pages/LearnBlazor/Components/ChildComponent.razor
@@ -20,6 +20,8 @@
         }
     </div>
     <button class="btn btn-danger" @onclick="OnClickBtnMethod">Button</button>
+    <GrandChildComponent></GrandChildComponent>
+
 </div>
 
 @code {
@@ -29,7 +31,7 @@
     public RenderFragment ChildContent { get; set; } //to pass any value within the child component
     [Parameter]
     public RenderFragment NewChildContent { get; set; }
-
+  
     [Parameter]
     public EventCallback<MouseEventArgs> OnClickBtnMethod { get; set; } //directly calling method from parent without passing any parameter
 }
